--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button class="calculator-button" onclick="dis(7)">7</button>
             <button class="calculator-button" onclick="dis(8)">8</button>
             <button class="calculator-button" onclick="dis(9)">9</button>
-            <button class="calculator-button-fnc" onclick="setOperation('*')">*</button>
+            <button class="calculator-button-fnc" onclick="setOperation('*')">X</button>
             <button class="calculator-button" onclick="dis(4)">4</button>
             <button class="calculator-button" onclick="dis(5)">5</button>
             <button class="calculator-button" onclick="dis(6)">6</button>
